    - update debian/firefox.postinst.in
    - Fixes LP: #512937, LP: #529136, LP: #552919, LP: #572733, LP: #574111,
      LP: #599978, LP: #600271, LP: #610522, LP: #610756, LP: #610907,
      LP: #612162, LP: #620400, LP: #623980, LP: #625014, LP: #630643,
      LP: #635166, LP: #638342, LP: #641838, LP: #658828, LP: #668809,
      LP: #672282, LP: #676239, LP: #707704, LP: #724090 

 -- Chris Coulson <chris.coulson@canonical.com>  Wed, 02 Mar 2011 17:02:17 +0000

firefox-4.0 (4.0~b12+build1+nobinonly-0ubuntu1) natty; urgency=low

  * New upstream release v4.0 B12 (FIREFOX_4_0b12_BUILD1)

  * Land the Unity appmenu extension work. It's shipped in its own package,
    although we build it from the Firefox source tree
  * Fix build with system NSPR
    - update debian/firefox-dev.install.in
  * Bump Standards-Version to 3.9.1
    - update debian/control
  * Add support for unpacked xpi's in the apport hook when reporting
    the extensions installed
    - update debian/apport/firefox.py.in
  * Ensure the Apport hook can be tested properly without modification
    - update debian/apport/firefox.py.in
  * Fix description of firefox-dev
    - update debian/control
  * Don't ship a vendor.js with our preferences in, as it requires a patch
    in order to get it in to the distributed omni.jar. Instead, move our
    vendor prefs in to distribution.ini
    - remove debian/vendor.js
    - update debian/distribution.ini
    - update debian/rules
    - remove debian/patches/install-ubuntu-prefs.patch
    - update debian/patches/series
  * Fix desktop-entry-invalid-category lintian warnings - remove Internet
    and Application categories, add GTK and GNOME
    - update debian/firefox-beta.desktop.in
    - update debian/firefox-final.desktop.in
    - update debian/firefox-nightly.desktop.in
    - update debian/firefox-unofficial.desktop.in
  * Fix build with system NSPR
    - update debian/firefox-dev.install.in
  * Add some missing files to the SDK